[project]
name = "comfyui-styleshot"
description = "NODES:StyleShotApply"
version = "1.0.4"
license = {file = "LICENSE"}
dependencies = ["jmespath==0.10.0", "python-dateutil==2.8.2", "diffusers==0.29.1", "transformers", "accelerate==0.21.0", "opencv-python==4.8.1.78", "einops==0.7.0", "botocore==1.34.139", "basicsr"]

[project.urls]
Repository = "https://github.com/neverbiasu/ComfyUI-StyleShot"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "faych"
DisplayName = "ComfyUI-StyleShot"
Icon = ""
